--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "docling>=2.64.1",
     "groq>=0.37.1",
     "ipykernel>=7.1.0",
+    "langchain-classic>=1.0.0",
     "langchain-core>=1.1.3",
     "langchain-google-genai>=4.0.0",
     "langchain-groq>=1.1.0",
